--- a/MeetingClient/src/index.html
+++ b/MeetingClient/src/index.html
@@ -1,13 +1,28 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>Meeting</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">  
+    <meta charset="utf-8">
+    <title>Meeting</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-  <app-root></app-root>
+    <app-root></app-root>
+<!-- Trigger/Open The Modal -->
+<button id="myBtn">Open Modal</button>
+
+    <div id="myPopUpModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p id="modalText">Some text in the Modal..</p>
+        </div>
+
+    </div>
 </body>
+
 </html>
