--- a/MeetingClient/src/index.html
+++ b/MeetingClient/src/index.html
@@ -12,7 +12,7 @@
 <body>
     <app-root></app-root>
 <!-- Trigger/Open The Modal -->
-<button id="myBtn">Open Modal</button>
+<button id="myBtn">Open Function Modal</button>
 
     <div id="myPopUpModal" class="modal">
 
