--- a/MeetingClient/src/index.html
+++ b/MeetingClient/src/index.html
@@ -13,6 +13,7 @@
     <app-root></app-root>
 <!-- Trigger/Open The Modal -->
 <button id="myBtn">Open Function Modal</button>
+<button id="clrBtn">Open Function Modal</button>
 
     <div id="myPopUpModal" class="modal">
 
@@ -25,4 +26,5 @@
     </div>
 </body>
 
+<script></script>
 </html>
