--- a/MeetingClient/src/index.html
+++ b/MeetingClient/src/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <app-root></app-root>
-<!-- Trigger/Open The Modal -->
-<button id="myBtn">Open Function Modal</button>
-<button id="clrBtn">Open Function Modal</button>
+    <!-- Trigger/Open The Modal -->
+    <button id="myBtn">Open Function Modal</button>
+    <button id="clrBtn" onclick="clearFuncionLog()">Clear Function Modal</button>
 
     <div id="myPopUpModal" class="modal">
 
@@ -26,5 +26,40 @@
     </div>
 </body>
 
-<script></script>
+<script>
+    // Get the modal
+    var modal = document.getElementById("myPopUpModal");
+    // modal.style.display = "block";
+    // Get the button that opens the modal
+    var btn = document.getElementById("myBtn");
+    btn.onclick = function () {
+        modal.style.display = "block";
+    }
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function () {
+        modal.style.display = "none";
+    }
+    //Auto close modal
+    // setTimeout(function () {
+
+    //     // Something you want delayed.
+    //     modal.style.display = "none";
+
+    // }, 1000);
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function (event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+
+    function clearFuncionLog() {
+        alert("clear log")
+        var textZone = document.getElementById("modalText");
+        textZone.innerHTML = "";
+    }
+</script>
+
 </html>
